SDK Release Notes
#################

.. contents:: List of Releases
   :depth: 1

UNRELEASED
##########

API Changes
***********
* ADDED IN: OptionSelectorDelegate: property bool constrainImage
* ADDED IN: Empty: property alias divider
* ADDED IN: ListItems/OptionSelector: signal delegateSelected()
* REMOVED IN: OptionSelector: signal scroll()
* ADDED IN: OptionSelector: signal delegateSelected()
* ADDED: ListItem OptionSelector to Components/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/Ambiance/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/SuruDark/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/SuruGradient/ListItems
* REMOVED IN ALL: attached property ItemStyle
* ADDED IN OrientationHelper: property alias rotating
* ADDED IN OrientationHelper: property alias __orientationHelper
* ADDED IN OrientationHelper: property bool transitionEnabled
* DEPRECATED IN QuickUtils: property Item rootObject
* CHANGED IN OrientationHelper: property int __orientationHelper TO property int orientationHelper
* CHANGED IN Toolbar: property bool active TO property bool opened
* CHANGED IN Toolbar: property bool lock TO property bool locked
* CHANGED IN ToolbarActions: property bool active TO property bool opened
* CHANGED IN ToolbarActions: property bool lock TO property bool locked
* REMOVED IN Toolbar: property bool active
* REMOVED IN Toolbar: property bool lock
* REMOVED IN ToolbarActions: property bool active
* REMOVED IN ToolbarActions: property bool lock
* CHANGED IN Page: property Header header TO property Header __propagated.header
* CHANGED IN Page: property Toolbar toolbar TO property Toolbar __propagated.toolbar
* CHANGED IN MainView: property Header header TO property Header __propagated.header
* CHANGED IN MainView: property Toolbar toolbar TO property Toolbar __propagated.toolbar
* DEPRECATED IN Page: property Header header
* DEPRECATED IN Page: property Toolbar toolbar
* DEPRECATED IN MainView: property Header header