@@ -104,6 +104,7 @@ ListItem.Empty
     property bool colourImage
     property real containerHeight
     property int selectedIndex
+    property bool confirmRemoval
     signal delegateClicked(int index)
 modules/Ubuntu/Components/OptionSelectorDelegate.qml
 ListItem.Standard
